src/test/ui/kindck/kindck-impl-type-params.nll.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/kindck-impl-type-params.rs:28:13
   |
LL |     let a = &t as &Gettable<T>;
   |             ^^ `T` cannot be sent between threads safely
   |
   = help: the trait `std::marker::Send` is not implemented for `T`
   = help: consider adding a `where T: std::marker::Send` bound
   = note: required because of the requirements on the impl of `Gettable<T>` for `S<T>`
   = note: required for the cast to the object type `dyn Gettable<T>`

error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/kindck-impl-type-params.rs:28:13
   |
LL |     let a = &t as &Gettable<T>;
   |             ^^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = help: consider adding a `where T: std::marker::Copy` bound
   = note: required because of the requirements on the impl of `Gettable<T>` for `S<T>`
   = note: required for the cast to the object type `dyn Gettable<T>`

error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/kindck-impl-type-params.rs:35:27
   |
LL |     let a: &Gettable<T> = &t;
   |                           ^^ `T` cannot be sent between threads safely
   |
   = help: the trait `std::marker::Send` is not implemented for `T`
   = help: consider adding a `where T: std::marker::Send` bound
   = note: required because of the requirements on the impl of `Gettable<T>` for `S<T>`
   = note: required for the cast to the object type `dyn Gettable<T>`

error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/kindck-impl-type-params.rs:35:27
   |
LL |     let a: &Gettable<T> = &t;
   |                           ^^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = help: consider adding a `where T: std::marker::Copy` bound
   = note: required because of the requirements on the impl of `Gettable<T>` for `S<T>`
   = note: required for the cast to the object type `dyn Gettable<T>`

warning: not reporting region error due to nll
  --> $DIR/kindck-impl-type-params.rs:42:13
   |
LL |     let a = &t as &Gettable<&'a isize>;
   |             ^^

error[E0277]: the trait bound `std::string::String: std::marker::Copy` is not satisfied
  --> $DIR/kindck-impl-type-params.rs:48:13
   |
LL |     let a = t as Box<Gettable<String>>;
   |             ^ the trait `std::marker::Copy` is not implemented for `std::string::String`
   |
   = note: required because of the requirements on the impl of `Gettable<std::string::String>` for `S<std::string::String>`
   = note: required for the cast to the object type `dyn Gettable<std::string::String>`

error[E0277]: the trait bound `foo3::Foo: std::marker::Copy` is not satisfied
  --> $DIR/kindck-impl-type-params.rs:56:33
   |
LL |     let a: Box<Gettable<Foo>> = t;
   |                                 ^ the trait `std::marker::Copy` is not implemented for `foo3::Foo`
   |
   = note: required because of the requirements on the impl of `Gettable<foo3::Foo>` for `S<foo3::Foo>`
   = note: required for the cast to the object type `dyn Gettable<foo3::Foo>`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
